--- a/woodhanger.html
+++ b/woodhanger.html
@@ -169,6 +169,7 @@
                 <li class="breadcrumb-item active">woodhanger</li>
             </ol>
         </nav>
+    </div>
 
     <!-- 関連ハンガー（戻り導線） -->
     <div class="container mt-4">
