--- a/eco.html
+++ b/eco.html
@@ -117,12 +117,41 @@
             border-bottom-left-radius: 0;
             border-bottom-right-radius: 0;
         }
+
+        /* ===== カルーセル操作部分を黒色に変更 ===== */
+
+        /* 左右の矢印アイコンを黒に */
+        .carousel-control-prev-icon,
+        .carousel-control-next-icon {
+            filter: invert(1) brightness(0);
+        }
+
+        /* 左右ボタンの背景を少し濃く（見やすさUP） */
+        .carousel-control-prev,
+        .carousel-control-next {
+            background-color: rgba(0, 0, 0, 0.15);
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+        /* 下のスライド丸（インジケーター）を黒に */
+        .carousel-indicators [data-bs-target] {
+            background-color: #000;
+        }
+
+        /* アクティブ中の丸はさらに濃く */
+        .carousel-indicators .active {
+            background-color: #000;
+        }
     </style>
 </head>
 
 <body>
 
-     <nav class="navbar navbar-expand-lg sticky-top">
+    <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <i class="bi bi-hanger"></i> ハンガーtimes
@@ -166,10 +195,10 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/272936-2.webp" class="d-block w-100" alt="マワハンガー エコノミック イメージ1">
+                    <img src="img/4132DEhbauL._AC_SL1001_.jpg" class="d-block w-100" alt="マワハンガー エコノミック イメージ1">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/272962-1.jpg" class="d-block w-100" alt="マワハンガー エコノミック イメージ2">
+                    <img src="img/cocodecow_yh3511.jpg" class="d-block w-100" alt="マワハンガー エコノミック イメージ2">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#petCarousel" data-bs-slide="prev">
