--- a/original.html
+++ b/original.html
@@ -117,13 +117,42 @@
             border-bottom-left-radius: 0;
             border-bottom-right-radius: 0;
         }
+
+        /* ===== カルーセル操作部分を黒色に変更 ===== */
+
+        /* 左右の矢印アイコンを黒に */
+        .carousel-control-prev-icon,
+        .carousel-control-next-icon {
+            filter: invert(1) brightness(0);
+        }
+
+        /* 左右ボタンの背景を少し濃く（見やすさUP） */
+        .carousel-control-prev,
+        .carousel-control-next {
+            background-color: rgba(0, 0, 0, 0.15);
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+        /* 下のスライド丸（インジケーター）を黒に */
+        .carousel-indicators [data-bs-target] {
+            background-color: #000;
+        }
+
+        /* アクティブ中の丸はさらに濃く */
+        .carousel-indicators .active {
+            background-color: #000;
+        }
     </style>
 </head>
 
 <body>
 
     <!-- ナビバー -->
-     <nav class="navbar navbar-expand-lg sticky-top">
+    <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <i class="bi bi-hanger"></i> ハンガーtimes
@@ -280,8 +309,8 @@
                 </div>
             </div>
 
-                <!-- サイド -->
-                <div class="col-lg-4">
+            <!-- サイド -->
+            <div class="col-lg-4">
                 <div class="sidebar-card">
                     <h5 class="fw-bold mb-3"><i class="bi bi-star-fill text-warning"></i> 評価</h5>
                     <p>初心者 ★★★☆☆</p>
@@ -299,51 +328,51 @@
             </div>
         </div>
     </div>
-                <footer>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-4 mb-4">
-                                <h5 class="fw-bold mb-3">
-                                    <i class="bi bi-heart-fill text-danger"></i> ハンガーtimes
-                                </h5>
-                                <p>ハンガーで衣服と暮らしを応援する情報サイト</p>
-                            </div>
-                            <div class="col-md-2 mb-4">
-                                <h6 class="fw-bold mb-3">サイト情報</h6>
-                                <ul class="list-unstyled">
-                                    <li><a href="#" class="text-white text-decoration-none">About</a>
-                                    </li>
-                                    <li><a href="#" class="text-white text-decoration-none">利用規約</a>
-                                    </li>
-                                    <li><a href="#" class="text-white text-decoration-none">プライバシー</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-md-2 mb-4">
-                                <h6 class="fw-bold mb-3">サポート</h6>
-                                <ul class="list-unstyled">
-                                    <li><a href="help.html" class="text-white text-decoration-none">ヘルプ</a></li>
-                                    <li><a href="form.html" class="text-white text-decoration-none">お問い合わせ</a>
-                                    </li>
-                                    <li><a href="faq.html" class="text-white text-decoration-none">FAQ</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-md-4 mb-4">
-                                <h6 class="fw-bold mb-3">フォローする</h6>
-                                <div class="d-flex gap-3">
-                                    <a href="#" class="text-white fs-4"><i class="bi bi-twitter"></i></a>
-                                    <a href="#" class="text-white fs-4"><i class="bi bi-instagram"></i></a>
-                                    <a href="#" class="text-white fs-4"><i class="bi bi-youtube"></i></a>
-                                    <a href="#" class="text-white fs-4"><i class="bi bi-facebook"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <hr class="border-light">
-                        <p class="text-center mb-0">&copy; 2026 ハンガーtimes. All rights reserved.</p>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 mb-4">
+                    <h5 class="fw-bold mb-3">
+                        <i class="bi bi-heart-fill text-danger"></i> ハンガーtimes
+                    </h5>
+                    <p>ハンガーで衣服と暮らしを応援する情報サイト</p>
+                </div>
+                <div class="col-md-2 mb-4">
+                    <h6 class="fw-bold mb-3">サイト情報</h6>
+                    <ul class="list-unstyled">
+                        <li><a href="#" class="text-white text-decoration-none">About</a>
+                        </li>
+                        <li><a href="#" class="text-white text-decoration-none">利用規約</a>
+                        </li>
+                        <li><a href="#" class="text-white text-decoration-none">プライバシー</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-2 mb-4">
+                    <h6 class="fw-bold mb-3">サポート</h6>
+                    <ul class="list-unstyled">
+                        <li><a href="help.html" class="text-white text-decoration-none">ヘルプ</a></li>
+                        <li><a href="form.html" class="text-white text-decoration-none">お問い合わせ</a>
+                        </li>
+                        <li><a href="faq.html" class="text-white text-decoration-none">FAQ</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <h6 class="fw-bold mb-3">フォローする</h6>
+                    <div class="d-flex gap-3">
+                        <a href="#" class="text-white fs-4"><i class="bi bi-twitter"></i></a>
+                        <a href="#" class="text-white fs-4"><i class="bi bi-instagram"></i></a>
+                        <a href="#" class="text-white fs-4"><i class="bi bi-youtube"></i></a>
+                        <a href="#" class="text-white fs-4"><i class="bi bi-facebook"></i></a>
                     </div>
-                </footer>
+                </div>
+            </div>
+            <hr class="border-light">
+            <p class="text-center mb-0">&copy; 2026 ハンガーtimes. All rights reserved.</p>
+        </div>
+    </footer>
 
-                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
