--- a/pulastic.html
+++ b/pulastic.html
@@ -167,7 +167,7 @@
             <h5 class="fw-bold mb-3" style="color: var(--brown-color);">
                 <i class="bi bi-arrow-left-circle"></i> 関連ハンガー
             </h5>
-            <a href="pet-guide-detailハンガー種類.html" class="btn btn-outline-success btn-lg rounded-pill px-5">
+            <a href="" class="btn btn-outline-success btn-lg rounded-pill px-5">
                 <i class="bi bi-hanger"></i> 他のハンガー種類を見る
             </a>
         </div>
