--- a/Accessories.html
+++ b/Accessories.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ハンガーtimes - アニマーレ ベルトハンガーW</title>
+    <!-- ファビコン（タブに表示されるアイコン） -->
     <link rel="icon" href="img/favicon (4).ico">
+
+    <!-- Bootstrap CSS を読み込み -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap アイコン CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 
     <style>
+        /* カスタムカラー変数 */
         :root {
             --primary-color: #10b981;
             --secondary-color: #f59e0b;
@@ -21,6 +26,7 @@
             background-color: #fff2e5;
         }
 
+        /* ナビゲーションバーの見た目 */
         .navbar {
             background-color: white;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -43,6 +49,7 @@
             color: var(--primary-color) !important;
         }
 
+        /* 情報カードやヘッダーのスタイル */
         .pet-header,
         .info-card,
         .sidebar-card {
@@ -53,6 +60,7 @@
             margin-bottom: 30px;
         }
 
+        /* アコーディオン展開時のボタンスタイル */
         .accordion-button:not(.collapsed) {
             background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
             color: white;
@@ -63,6 +71,7 @@
             font-weight: bold;
         }
 
+        /* 統計バッジのスタイル */
         .stat-badge {
             background: #dcfce7;
             color: var(--primary-color);
@@ -71,6 +80,7 @@
             text-align: center;
         }
 
+        /* フッタースタイル */
         footer {
             background-color: #8e7f7f;
             color: #d8e1f1;
@@ -79,21 +89,19 @@
             border-radius: 50px 50px 0 0;
         }
 
+        /* カルーセル画像の高さや丸み */
         .carousel-item img {
             height: 450px;
             object-fit: cover;
             border-radius: 30px;
         }
 
-        /* ===== カルーセル操作部分を黒色に変更 ===== */
-
-        /* 左右の矢印アイコンを黒に */
+        /* カルーセル操作部分を黒に */
         .carousel-control-prev-icon,
         .carousel-control-next-icon {
             filter: invert(1) brightness(0);
         }
 
-        /* 左右ボタンの背景を少し濃く（見やすさUP） */
         .carousel-control-prev,
         .carousel-control-next {
             background-color: rgba(0, 0, 0, 0.15);
@@ -104,12 +112,10 @@
             transform: translateY(-50%);
         }
 
-        /* 下のスライド丸（インジケーター）を黒に */
         .carousel-indicators [data-bs-target] {
             background-color: #000;
         }
 
-        /* アクティブ中の丸はさらに濃く */
         .carousel-indicators .active {
             background-color: #000;
         }
@@ -117,23 +123,35 @@
 </head>
 
 <body>
+    <!-- ナビゲーションバー -->
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
+            <!-- ロゴとサイト名 -->
             <a class="navbar-brand" href="index.html">
                 <i class="bi bi-hanger"></i> ハンガーtimes
             </a>
+            <!-- モバイル用メニューボタン -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
+            <!-- ナビリンク -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">ホーム</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pet-guide-listハンガー図鑑.html">ハンガー図鑑</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pet-care-guide使い方ガイド.html">使い方ガイド</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pet-guide-qaQ&A.html">Q&A</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pet-guide-form管理記録.html">管理記録</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pet-guide-recordレビュー.html">メンテナンス記録</a></li>
+                    <li class="nav-item"><a class="nav-link"
+                            href="pet-guide-listハンガー図鑑.html">ハンガー図鑑</a></li>
+                    <li class="nav-item"><a class="nav-link"
+                            href="pet-care-guide使い方ガイド.html">使い方ガイド</a></li>
+                    <li class="nav-item"><a class="nav-link"
+                            href="pet-guide-qaQ&A.html">Q&A</a></li>
+                    <li class="nav-item"><a class="nav-link"
+                            href="pet-guide-form管理記録.html">管理記録</a></li>
+                    <li class="nav-item"><a class="nav-link"
+                            href="pet-guide-recordレビュー.html">メンテナンス記録</a></li>
                 </ul>
+
+                <!-- ログインボタン -->
                 <a href="login.html"
                     class="btn btn-outline-success ms-3 rounded-pill fw-bold btn-login text-decoration-none">
                     <i class="bi bi-person-circle"></i> ログイン
@@ -142,23 +160,28 @@
         </div>
     </nav>
 
+    <!-- コンテナ（メイン内容が収まる領域） -->
     <div class="container mt-4">
-        <!-- パンくず -->
+        <!-- パンくずリスト -->
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">ホーム</a></li>
-                <li class="breadcrumb-item"><a href="pet-guide-listハンガー図鑑.html">ハンガー図鑑</a></li>
+                <li class="breadcrumb-item"><a
+                        href="pet-guide-listハンガー図鑑.html">ハンガー図鑑</a></li>
                 <li class="breadcrumb-item active">アニマーレ ベルトハンガーW</li>
             </ol>
         </nav>
 
+        <!-- 画像カルーセル（スライダー） -->
         <div id="petCarousel" class="carousel slide" data-bs-ride="carousel">
+            <!-- スライドインジケーター -->
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#petCarousel" data-bs-slide-to="0" class="active"></button>
                 <button type="button" data-bs-target="#petCarousel" data-bs-slide-to="1"></button>
                 <button type="button" data-bs-target="#petCarousel" data-bs-slide-to="2"></button>
             </div>
             <div class="carousel-inner">
+                <!-- 最初の画像は active -->
                 <div class="carousel-item active">
                     <img src="img/272936-2.webp" class="d-block w-100" alt="アニマーレ ベルトハンガーW1">
                 </div>
@@ -166,16 +189,21 @@
                     <img src="img/272962-1.jpg" class="d-block w-100" alt="アニマーレ ベルトハンガーW2">
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#petCarousel" data-bs-slide="prev">
+
+            <!-- ナビ矢印 -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#petCarousel"
+                data-bs-slide="prev">
                 <span class="carousel-control-prev-icon"></span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#petCarousel" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#petCarousel"
+                data-bs-slide="next">
                 <span class="carousel-control-next-icon"></span>
             </button>
         </div>
 
-        <!-- ヘッダー -->
+        <!-- 商品ヘッダー -->
         <div class="pet-header">
+            <!-- 初心者〜中級者向けバッジ -->
             <span class="badge" style="background:#dcfce7;color:#10b981;padding:10px 20px;border-radius:50px;">
                 初心者〜中級者向け
             </span>
@@ -187,16 +215,16 @@
             </p>
         </div>
 
-
-
         <div class="row">
-            <!-- メイン -->
+            <!-- メインコンテンツ -->
             <div class="col-lg-8">
                 <div class="info-card">
+                    <!-- 基本情報見出し -->
                     <h3 class="fw-bold mb-4" style="color:var(--brown-color);">
                         <i class="bi bi-info-circle-fill text-success"></i> 基本情報
                     </h3>
 
+                    <!-- 基本情報の統計 -->
                     <div class="row g-3 mb-4">
                         <div class="col-md-3">
                             <div class="stat-badge"><strong>サイズ</strong><br>中型</div>
@@ -212,6 +240,7 @@
                         </div>
                     </div>
 
+                    <!-- 商品説明テキスト -->
                     <p>
                         アニマーレ ベルトハンガーWは、ベルトやネクタイ、
                         ストールなどの細長い小物をまとめて収納できる専用ハンガー。
@@ -220,8 +249,9 @@
                     </p>
                 </div>
 
-                <!-- アコーディオン -->
+                <!-- アコーディオン：特徴／ケア／しつけ -->
                 <div class="accordion mb-4" id="petAccordion">
+                    <!-- 特徴 -->
                     <div class="accordion-item mb-3" style="border: none; border-radius: 20px;">
                         <h2 class="accordion-header">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse"
@@ -229,7 +259,8 @@
                                 <i class="bi bi-heart me-2"></i> 特徴
                             </button>
                         </h2>
-                        <div id="character" class="accordion-collapse collapse show" data-bs-parent="#petAccordion">
+                        <div id="character" class="accordion-collapse collapse show"
+                            data-bs-parent="#petAccordion">
                             <div class="accordion-body">
                                 <h5 class="fw-bold mb-3 mt-4">特徴</h5>
                                 <ul>
@@ -242,6 +273,7 @@
                         </div>
                     </div>
 
+                    <!-- ケア方法 -->
                     <div class="accordion-item mb-3" style="border: none; border-radius: 20px;">
                         <h2 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -249,7 +281,8 @@
                                 <i class="bi bi-clipboard-heart me-2"></i> ケア
                             </button>
                         </h2>
-                        <div id="care" class="accordion-collapse collapse" data-bs-parent="#petAccordion">
+                        <div id="care" class="accordion-collapse collapse"
+                            data-bs-parent="#petAccordion">
                             <div class="accordion-body">
                                 <h5 class="fw-bold mb-3">日常のケア</h5>
                                 <ul>
@@ -261,14 +294,16 @@
                         </div>
                     </div>
 
+                    <!-- しつけ（整理のコツ） -->
                     <div class="accordion-item" style="border: none; border-radius: 20px;">
                         <h2 class="accordion-header">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#training">
+                            <button class="accordion-button collapsed" type="button"
+                                data-bs-toggle="collapse" data-bs-target="#training">
                                 <i class="bi bi-award me-2"></i> しつけ
                             </button>
                         </h2>
-                        <div id="training" class="accordion-collapse collapse" data-bs-parent="#petAccordion">
+                        <div id="training" class="accordion-collapse collapse"
+                            data-bs-parent="#petAccordion">
                             <div class="accordion-body">
                                 <h5 class="fw-bold mb-3">服のしつけのポイント</h5>
                                 <ul>
@@ -279,11 +314,13 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
             </div>
 
-            <!-- サイド -->
+            <!-- サイドバー -->
             <div class="col-lg-4">
+                <!-- 評価カード -->
                 <div class="sidebar-card">
                     <h5 class="fw-bold mb-3">
                         <i class="bi bi-star-fill text-warning"></i> 評価
@@ -293,6 +330,7 @@
                     <p>収納力 ★★★★★</p>
                 </div>
 
+                <!-- タグ表示 -->
                 <div class="sidebar-card">
                     <h5 class="fw-bold mb-3">
                         <i class="bi bi-tags"></i> タグ
@@ -306,15 +344,19 @@
         </div>
     </div>
 
+    <!-- フッター -->
     <footer>
         <div class="container">
             <div class="row">
+                <!-- サイト概要 -->
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">
                         <i class="bi bi-heart-fill text-danger"></i> ハンガーtimes
                     </h5>
                     <p>ハンガーで衣服と暮らしを応援する情報サイト</p>
                 </div>
+
+                <!-- サイト情報リンク -->
                 <div class="col-md-2 mb-4">
                     <h6 class="fw-bold mb-3">サイト情報</h6>
                     <ul class="list-unstyled">
@@ -323,6 +365,8 @@
                         <li><a href="#" class="text-white text-decoration-none">プライバシー</a></li>
                     </ul>
                 </div>
+
+                <!-- サポートリンク -->
                 <div class="col-md-2 mb-4">
                     <h6 class="fw-bold mb-3">サポート</h6>
                     <ul class="list-unstyled">
@@ -331,6 +375,8 @@
                         <li><a href="faq.html" class="text-white text-decoration-none">FAQ</a></li>
                     </ul>
                 </div>
+
+                <!-- ソーシャルリンク -->
                 <div class="col-md-4 mb-4">
                     <h6 class="fw-bold mb-3">フォローする</h6>
                     <div class="d-flex gap-3">
@@ -346,6 +392,7 @@
         </div>
     </footer>
 
+    <!-- Bootstrap JS を読み込み -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
