--- a/bodyhanger.html
+++ b/bodyhanger.html
@@ -2,14 +2,21 @@
 <html lang="ja">
 
 <head>
+    <!-- ページの基本設定 -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ハンガーtimes - ハンガー種類</title>
+
+    <!-- タブに表示されるアイコン -->
     <link rel="icon" href="img/favicon (4).ico">
+
+    <!-- Bootstrap CSS の読み込み -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap アイコンフォント -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 
     <style>
+        /* カスタムカラー変数 */
         :root {
             --primary-color: #10b981;
             --secondary-color: #f59e0b;
@@ -17,11 +24,13 @@
             --brown-color: #78350f;
         }
 
+        /* Body 全体の基本スタイル */
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #fff2e5;
         }
 
+        /* ナビゲーションバーのスタイル */
         .navbar {
             background-color: white;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -44,6 +53,7 @@
             color: var(--primary-color) !important;
         }
 
+        /* ヘッダー部分 */
         .pet-header {
             background: white;
             border-radius: 30px;
@@ -54,6 +64,7 @@
             z-index: 1;
         }
 
+        /* 通常の情報カード */
         .info-card {
             background: white;
             border-radius: 25px;
@@ -62,6 +73,7 @@
             margin-bottom: 30px;
         }
 
+        /* アコーディオン展開時の色 */
         .accordion-button:not(.collapsed) {
             background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
             color: white;
@@ -72,6 +84,7 @@
             font-weight: bold;
         }
 
+        /* 統計バッジ用のスタイル */
         .stat-badge {
             background: #dcfce7;
             color: var(--primary-color);
@@ -80,6 +93,7 @@
             text-align: center;
         }
 
+        /* サイドバーカード */
         .sidebar-card {
             background: white;
             border-radius: 25px;
@@ -88,6 +102,7 @@
             margin-bottom: 20px;
         }
 
+        /* フッター全体 */
         footer {
             background-color: #8e7f7f;
             color: #d8e1f1;
@@ -96,21 +111,19 @@
             border-radius: 50px 50px 0 0;
         }
 
+        /* カルーセル内の画像 */
         .carousel-item img {
             height: 450px;
             object-fit: cover;
             border-radius: 30px;
         }
 
-        /* ===== カルーセル操作部分を黒色に変更 ===== */
-
-        /* 左右の矢印アイコンを黒に */
+        /* カルーセル操作アイコン（左右矢印）を黒に */
         .carousel-control-prev-icon,
         .carousel-control-next-icon {
             filter: invert(1) brightness(0);
         }
 
-        /* 左右ボタンの背景を少し濃く（見やすさUP） */
         .carousel-control-prev,
         .carousel-control-next {
             background-color: rgba(0, 0, 0, 0.15);
@@ -121,12 +134,11 @@
             transform: translateY(-50%);
         }
 
-        /* 下のスライド丸（インジケーター）を黒に */
+        /* カルーセル下部インジケーター（点）の色 */
         .carousel-indicators [data-bs-target] {
             background-color: #000;
         }
 
-        /* アクティブ中の丸はさらに濃く */
         .carousel-indicators .active {
             background-color: #000;
         }
@@ -134,16 +146,23 @@
 </head>
 
 <body>
+    <!-- ===== ナビゲーションバー ===== -->
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
+            <!-- サイトロゴ／ブランド -->
             <a class="navbar-brand" href="index.html">
                 <i class="bi bi-hanger"></i> ハンガーtimes
             </a>
+
+            <!-- モバイル時のトグルボタン -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
+            <!-- ナビリンクメニュー -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
+                    <!-- サイト内ページリンク -->
                     <li class="nav-item"><a class="nav-link" href="index.html">ホーム</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-listハンガー図鑑.html">ハンガー図鑑</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-care-guide使い方ガイド.html">使い方ガイド</a></li>
@@ -151,6 +170,8 @@
                     <li class="nav-item"><a class="nav-link" href="pet-guide-form管理記録.html">管理記録</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-recordレビュー.html">メンテナンス記録</a></li>
                 </ul>
+
+                <!-- ログインボタン -->
                 <a href="login.html"
                     class="btn btn-outline-success ms-3 rounded-pill fw-bold btn-login text-decoration-none">
                     <i class="bi bi-person-circle"></i> ログイン
@@ -161,7 +182,7 @@
 
     <div class="container mt-4">
 
-        <!-- パンくず -->
+        <!-- ===== パンくずリスト（現在のページ位置を表示） ===== -->
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">ホーム</a></li>
@@ -170,21 +191,28 @@
             </ol>
         </nav>
 
-        <!-- ヘッダー -->
+        <!-- ===== カルーセル（画像スライダー） ===== -->
         <div id="petCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
+            <!-- 画像切替の点インジケーター -->
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#petCarousel" data-bs-slide-to="0" class="active"></button>
                 <button type="button" data-bs-target="#petCarousel" data-bs-slide-to="1"></button>
                 <button type="button" data-bs-target="#petCarousel" data-bs-slide-to="2"></button>
             </div>
+
             <div class="carousel-inner">
+                <!-- スライド画像1 -->
                 <div class="carousel-item active">
                     <img src="img/41nbed75ioL._AC_SL1500_.jpg" class="d-block w-100" alt="マワハンガー シルエット アイコン">
                 </div>
+
+                <!-- スライド画像2 -->
                 <div class="carousel-item">
                     <img src="img/41OKypeOyYL._AC_SX466_.jpg" class="d-block w-100" alt="マワハンガー シルエット 実物">
                 </div>
             </div>
+
+            <!-- カルーセル操作矢印（前後） -->
             <button class="carousel-control-prev" type="button" data-bs-target="#petCarousel" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon"></span>
             </button>
@@ -193,26 +221,34 @@
             </button>
         </div>
 
+        <!-- ===== ヘッダー（商品タイトルと説明） ===== -->
         <div class="pet-header">
+            <!-- おすすめバッジ -->
             <span class="badge" style="background:#dcfce7;color:#10b981;padding:10px 20px;border-radius:50px;">
                 中級者〜上級者向け
             </span>
+            <!-- 商品名 -->
             <h1 class="fw-bold mt-3" style="color:var(--brown-color);">
                 マワハンガー ボディフォーム
             </h1>
+            <!-- 商品キャッチ -->
             <p class="lead text-muted">
                 立体フォルムで衣類のシルエットを美しく保つ高機能ハンガー
             </p>
         </div>
 
         <div class="row">
-            <!-- メイン -->
+            <!-- ===== メインコンテンツ ===== -->
             <div class="col-lg-8">
+                <!-- 基本情報カード -->
                 <div class="info-card">
+
+                    <!-- 見出し -->
                     <h3 class="fw-bold mb-4" style="color: var(--brown-color);">
                         <i class="bi bi-info-circle-fill text-success"></i> 基本情報
                     </h3>
 
+                    <!-- 統計バッジ（サイズ・重さ・寿命・原産地） -->
                     <div class="row g-3 mb-4">
                         <div class="col-md-3">
                             <div class="stat-badge"><strong>サイズ</strong><br>中〜大型</div>
@@ -228,23 +264,25 @@
                         </div>
                     </div>
 
+                    <!-- 商品説明 -->
                     <p>
-                        ボディフォームは、肩から胴体にかけて厚みを持たせた立体設計が特徴のマワハンガー。
-                        ジャケットやコート、スーツなど重さのある衣類でもシルエットを崩さず自然な形を保つ。
-                        幅広ショルダーがハンガー跡を防ぎ、PVCコーティングで滑りやすい素材にも対応。
-                        長期保管やシーズンオフの衣類管理に最適。
+                        ボディフォームは肩から胴体にかけて厚みを持たせた立体設計が特徴のハンガーで、
+                        重い衣類も型崩れせずに掛けられる仕様です。MAWAハンガーはドイツ製の
+                        滑りにくい特殊コーティングが特徴で、多くの衣類に対応します。 :contentReference[oaicite:0]{index=0}
                     </p>
                 </div>
 
-                <!-- アコーディオン（動く） -->
+                <!-- ===== アコーディオン（特徴・ケア・しつけ） ===== -->
                 <div class="accordion mb-4" id="petAccordion">
-                    <div class="accordion-item mb-3" style="border:none;border-radius:20px;">
+
+                    <div class="accordion-item mb-3" style="border:none; border-radius:20px; overflow: hidden;">
                         <h2 class="accordion-header">
-                            <button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#character">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#character">
                                 <i class="bi bi-heart me-2"></i> 特徴
                             </button>
                         </h2>
-                        <div id="character" class="accordion-collapse collapse show">
+                        <div id="character" class="accordion-collapse collapse show" data-bs-parent="#petAccordion">
                             <div class="accordion-body">
                                 <ul>
                                     <li>立体ボディフォーム構造</li>
@@ -256,7 +294,7 @@
                         </div>
                     </div>
 
-                    <div class="accordion-item mb-3" style="border: none; border-radius: 20px;">
+                    <div class="accordion-item mb-3" style="border: none; border-radius: 20px; overflow: hidden;">
                         <h2 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#care">
@@ -275,16 +313,16 @@
                         </div>
                     </div>
 
-                    <div class="accordion-item" style="border: none; border-radius: 20px;">
+                    <div class="accordion-item mb-3" style="border: none; border-radius: 20px; overflow: hidden;">
                         <h2 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#training">
-                                <i class="bi bi-award me-2"></i> しつけ
+                                <i class="bi bi-lightbulb me-2"></i> しつけ（使い方のコツ）
                             </button>
                         </h2>
                         <div id="training" class="accordion-collapse collapse" data-bs-parent="#petAccordion">
                             <div class="accordion-body">
-                                <h5 class="fw-bold mb-3">服のしつけのポイント</h5>
+                                <h5 class="fw-bold mb-3">しつけのこつ</h5>
                                 <ul>
                                     <li>服の形を記憶させる</li>
                                     <li>重さを分散させる</li>
@@ -295,36 +333,41 @@
                     </div>
                 </div>
             </div>
+                <!-- ===== サイドバーカラム ===== -->
+                <div class="col-lg-4">
+                    <!-- 評価カード -->
+                    <div class="sidebar-card">
+                        <h5 class="fw-bold mb-3"><i class="bi bi-star-fill text-warning"></i> 評価</h5>
+                        <p>初心者 ★★★☆☆</p>
+                        <p>お手入れ ★★★☆☆</p>
+                        <p>しつけ ★★★★★</p>
+                    </div>
 
-            <!-- サイド -->
-            <div class="col-lg-4">
-                <div class="sidebar-card">
-                    <h5 class="fw-bold mb-3"><i class="bi bi-star-fill text-warning"></i> 評価</h5>
-                    <p>初心者 ★★★☆☆</p>
-                    <p>お手入れ ★★★☆☆</p>
-                    <p>しつけ ★★★★★</p>
-                </div>
-
-                <div class="sidebar-card">
-                    <h5 class="fw-bold mb-3"><i class="bi bi-tags"></i> タグ</h5>
-                    <span class="badge bg-success">#ハンガー</span>
-                    <span class="badge bg-warning text-dark">#大型</span>
-                    <span class="badge bg-danger">#コート</span>
-                    <span class="badge bg-primary">#スーツ</span>
+                    <!-- タグカード -->
+                    <div class="sidebar-card">
+                        <h5 class="fw-bold mb-3"><i class="bi bi-tags"></i> タグ</h5>
+                        <span class="badge bg-success">#ハンガー</span>
+                        <span class="badge bg-warning text-dark">#大型</span>
+                        <span class="badge bg-danger">#コート</span>
+                        <span class="badge bg-primary">#スーツ</span>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
+        <!-- フッター -->
     <footer>
         <div class="container">
             <div class="row">
+                <!-- サイト概要 -->
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">
                         <i class="bi bi-heart-fill text-danger"></i> ハンガーtimes
                     </h5>
                     <p>ハンガーで衣服と暮らしを応援する情報サイト</p>
                 </div>
+
+                <!-- サイト情報リンク -->
                 <div class="col-md-2 mb-4">
                     <h6 class="fw-bold mb-3">サイト情報</h6>
                     <ul class="list-unstyled">
@@ -333,6 +376,8 @@
                         <li><a href="#" class="text-white text-decoration-none">プライバシー</a></li>
                     </ul>
                 </div>
+
+                <!-- サポートリンク -->
                 <div class="col-md-2 mb-4">
                     <h6 class="fw-bold mb-3">サポート</h6>
                     <ul class="list-unstyled">
@@ -341,6 +386,8 @@
                         <li><a href="faq.html" class="text-white text-decoration-none">FAQ</a></li>
                     </ul>
                 </div>
+
+                <!-- ソーシャルリンク -->
                 <div class="col-md-4 mb-4">
                     <h6 class="fw-bold mb-3">フォローする</h6>
                     <div class="d-flex gap-3">
@@ -356,7 +403,8 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Bootstrap JS の読み込み -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
