--- a/cliptype.html
+++ b/cliptype.html
@@ -5,22 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ハンガーtimes - ハンガー種類</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="img/favicon (4).ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+
     <style>
+        /* サイト全体で使う色の定義（メンテナンス性を高める変数設定） */
         :root {
-            --primary-color: #10b981;
-            --secondary-color: #f59e0b;
-            --accent-color: #fb923c;
-            --brown-color: #78350f;
+            --primary-color: #10b981;   /* メインの緑色 */
+            --secondary-color: #f59e0b; /* アクセントのオレンジ */
+            --accent-color: #fb923c;    /* 補助色 */
+            --brown-color: #78350f;     /* テキストや見出し用の茶色 */
         }
 
+        /* 全体背景とフォントの設定 */
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #fff2e5;
+            background-color: #fff2e5; /* 暖かみのあるベージュ系背景 */
         }
 
+        /* ナビゲーションバーのスタイル調整 */
         .navbar {
             background-color: white;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -43,22 +48,25 @@
             color: var(--primary-color) !important;
         }
 
+        /* メイン画像（カルーセル）のスライド画像サイズ固定と角丸 */
         .carousel-item img {
             height: 450px;
             object-fit: cover;
             border-radius: 30px;
         }
 
+        /* 商品情報のヘッダー部分（浮き上がって見えるデザイン） */
         .pet-header {
             background: white;
             border-radius: 30px;
             padding: 40px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-            margin: -80px 0 30px 0;
+            margin: -80px 0 30px 0; /* カルーセルに少し被せるためのネガティブマージン */
             position: relative;
             z-index: 1;
         }
 
+        /* コンテンツを囲む白いカードのスタイル */
         .info-card {
             background: white;
             border-radius: 25px;
@@ -67,6 +75,7 @@
             margin-bottom: 30px;
         }
 
+        /* アコーディオン：開いている時のグラデーション設定 */
         .accordion-button:not(.collapsed) {
             background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
             color: white;
@@ -77,6 +86,7 @@
             font-weight: bold;
         }
 
+        /* 基本情報エリアの丸いバッジ */
         .stat-badge {
             background: #dcfce7;
             color: var(--primary-color);
@@ -85,6 +95,7 @@
             text-align: center;
         }
 
+        /* 右側サイドバーのカードスタイル */
         .sidebar-card {
             background: white;
             border-radius: 25px;
@@ -93,6 +104,7 @@
             margin-bottom: 20px;
         }
 
+        /* フッターの共通スタイル */
         footer {
             background-color: #8e7f7f;
             color: #d8e1f1;
@@ -101,15 +113,12 @@
             border-radius: 50px 50px 0 0;
         }
 
-        /* ===== カルーセル操作部分を黒色に変更 ===== */
-
-        /* 左右の矢印アイコンを黒に */
+        /* カルーセルの操作ボタン（矢印や下の点）を黒系にカスタマイズ */
         .carousel-control-prev-icon,
         .carousel-control-next-icon {
             filter: invert(1) brightness(0);
         }
 
-        /* 左右ボタンの背景を少し濃く（見やすさUP） */
         .carousel-control-prev,
         .carousel-control-next {
             background-color: rgba(0, 0, 0, 0.15);
@@ -120,12 +129,10 @@
             transform: translateY(-50%);
         }
 
-        /* 下のスライド丸（インジケーター）を黒に */
         .carousel-indicators [data-bs-target] {
             background-color: #000;
         }
 
-        /* アクティブ中の丸はさらに濃く */
         .carousel-indicators .active {
             background-color: #000;
         }
@@ -157,17 +164,16 @@
             </div>
         </div>
     </nav>
-    <!-- パンくず -->
+
     <div class="container mt-4">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="indexホーム.html">ホーム</a></li>
+                <li class="breadcrumb-item"><a href="index.html">ホーム</a></li>
                 <li class="breadcrumb-item"><a href="pet-guide-listハンガー図鑑.html">ハンガー図鑑</a></li>
                 <li class="breadcrumb-item active">ハンズオリジナル 木製ハンガー クリップタイプ</li>
             </ol>
         </nav>
 
-        <!-- カルーセル -->
         <div id="petCarousel" class="carousel slide mb-4" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -185,7 +191,6 @@
             </button>
         </div>
 
-        <!-- ヘッダー -->
         <div class="pet-header">
             <div class="row align-items-center">
                 <div class="col-md-8">
@@ -229,7 +234,7 @@
                 </div>
 
                 <div class="accordion mb-4" id="petAccordion">
-                    <div class="accordion-item mb-3" style="border: none; border-radius: 20px;">
+                    <div class="accordion-item mb-3" style="border: none; border-radius: 20px; overflow: hidden;">
                         <h2 class="accordion-header">
                             <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#character">
@@ -238,7 +243,6 @@
                         </h2>
                         <div id="character" class="accordion-collapse collapse show" data-bs-parent="#petAccordion">
                             <div class="accordion-body">
-                                <h5 class="fw-bold mb-3 mt-4">特徴</h5>
                                 <ul>
                                     <li>天然木のナチュラルデザイン</li>
                                     <li>強力クリップでずり落ち防止</li>
@@ -250,7 +254,7 @@
                         </div>
                     </div>
 
-                    <div class="accordion-item mb-3" style="border: none; border-radius: 20px;">
+                    <div class="accordion-item mb-3" style="border: none; border-radius: 20px; overflow: hidden;">
                         <h2 class="accordion-header">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#care">
@@ -271,7 +275,6 @@
                 </div>
             </div>
 
-            <!-- サイドバー -->
             <div class="col-lg-4">
                 <div class="sidebar-card">
                     <h5 class="fw-bold mb-4" style="color: var(--brown-color);">
@@ -302,15 +305,19 @@
         </div>
     </div>
 
+    <!-- フッター -->
     <footer>
         <div class="container">
             <div class="row">
+                <!-- サイト概要 -->
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">
                         <i class="bi bi-heart-fill text-danger"></i> ハンガーtimes
                     </h5>
                     <p>ハンガーで衣服と暮らしを応援する情報サイト</p>
                 </div>
+
+                <!-- サイト情報リンク -->
                 <div class="col-md-2 mb-4">
                     <h6 class="fw-bold mb-3">サイト情報</h6>
                     <ul class="list-unstyled">
@@ -319,6 +326,8 @@
                         <li><a href="#" class="text-white text-decoration-none">プライバシー</a></li>
                     </ul>
                 </div>
+
+                <!-- サポートリンク -->
                 <div class="col-md-2 mb-4">
                     <h6 class="fw-bold mb-3">サポート</h6>
                     <ul class="list-unstyled">
@@ -327,6 +336,8 @@
                         <li><a href="faq.html" class="text-white text-decoration-none">FAQ</a></li>
                     </ul>
                 </div>
+
+                <!-- ソーシャルリンク -->
                 <div class="col-md-4 mb-4">
                     <h6 class="fw-bold mb-3">フォローする</h6>
                     <div class="d-flex gap-3">
@@ -341,6 +352,7 @@
             <p class="text-center mb-0">&copy; 2026 ハンガーtimes. All rights reserved.</p>
         </div>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
