--- a/eco.html
+++ b/eco.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <style>
+        /* サイト共通のカラー変数 */
         :root {
             --primary-color: #10b981;
             --secondary-color: #f59e0b;
@@ -19,6 +20,7 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #fff2e5;
+            /* 暖かみのある背景色 */
         }
 
         .navbar {
@@ -43,22 +45,26 @@
             color: var(--primary-color) !important;
         }
 
+        /* メイン画像（カルーセル）の高さ固定と角丸 */
         .carousel-item img {
             height: 450px;
             object-fit: cover;
             border-radius: 30px;
         }
 
+        /* 商品名が載るメインヘッダーの浮き出し効果 */
         .pet-header {
             background: white;
             border-radius: 30px;
             padding: 40px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
             margin: -80px 0 30px 0;
+            /* カルーセルに少し重ねる設定 */
             position: relative;
             z-index: 1;
         }
 
+        /* 情報を囲む白カード */
         .info-card {
             background: white;
             border-radius: 25px;
@@ -67,16 +73,13 @@
             margin-bottom: 30px;
         }
 
+        /* アコーディオン：開いている時のグラデーション */
         .accordion-button:not(.collapsed) {
             background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
             color: white;
         }
 
-        .accordion-button {
-            border-radius: 20px !important;
-            font-weight: bold;
-        }
-
+        /* スペックを表示する緑のバッジ */
         .stat-badge {
             background: #dcfce7;
             color: var(--primary-color);
@@ -85,6 +88,7 @@
             text-align: center;
         }
 
+        /* サイドバー（評価・タグ）のカード */
         .sidebar-card {
             background: white;
             border-radius: 25px;
@@ -93,6 +97,7 @@
             margin-bottom: 20px;
         }
 
+        /* フッターのスタイル */
         footer {
             background-color: #8e7f7f;
             color: #d8e1f1;
@@ -101,32 +106,29 @@
             border-radius: 50px 50px 0 0;
         }
 
+        /* アコーディオン特有のカスタマイズ（枠線の角丸をきれいに保つ） */
         .accordion .accordion-item {
             border-radius: 20px;
             overflow: hidden;
             margin-bottom: 1rem;
         }
 
-        /* ボタン部分の角丸 */
         .accordion-button {
             border-radius: 20px !important;
         }
 
-        /* 展開時の角丸調整 */
+        /* 展開した時に下の角を直角にして、中身と繋がって見えるようにする調整 */
         .accordion-button:not(.collapsed) {
             border-bottom-left-radius: 0;
             border-bottom-right-radius: 0;
         }
 
-        /* ===== カルーセル操作部分を黒色に変更 ===== */
-
-        /* 左右の矢印アイコンを黒に */
+        /* カルーセルの操作パーツ（矢印・インジケーター）を黒色に反転 */
         .carousel-control-prev-icon,
         .carousel-control-next-icon {
             filter: invert(1) brightness(0);
         }
 
-        /* 左右ボタンの背景を少し濃く（見やすさUP） */
         .carousel-control-prev,
         .carousel-control-next {
             background-color: rgba(0, 0, 0, 0.15);
@@ -137,13 +139,7 @@
             transform: translateY(-50%);
         }
 
-        /* 下のスライド丸（インジケーター）を黒に */
         .carousel-indicators [data-bs-target] {
-            background-color: #000;
-        }
-
-        /* アクティブ中の丸はさらに濃く */
-        .carousel-indicators .active {
             background-color: #000;
         }
     </style>
@@ -151,16 +147,23 @@
 
 <body>
 
+    <!-- ===== ナビゲーションバー ===== -->
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
+            <!-- サイトロゴ／ブランド -->
             <a class="navbar-brand" href="index.html">
                 <i class="bi bi-hanger"></i> ハンガーtimes
             </a>
+
+            <!-- モバイル時のトグルボタン -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
+            <!-- ナビリンクメニュー -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
+                    <!-- サイト内ページリンク -->
                     <li class="nav-item"><a class="nav-link" href="index.html">ホーム</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-listハンガー図鑑.html">ハンガー図鑑</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-care-guide使い方ガイド.html">使い方ガイド</a></li>
@@ -168,6 +171,8 @@
                     <li class="nav-item"><a class="nav-link" href="pet-guide-form管理記録.html">管理記録</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-recordレビュー.html">メンテナンス記録</a></li>
                 </ul>
+
+                <!-- ログインボタン -->
                 <a href="login.html"
                     class="btn btn-outline-success ms-3 rounded-pill fw-bold btn-login text-decoration-none">
                     <i class="bi bi-person-circle"></i> ログイン
