--- a/faq.html
+++ b/faq.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ - ハンガーtimes</title>
-     <link rel="icon" href="img/favicon (4).ico">
+    <link rel="icon" href="img/favicon (4).ico">
 
-    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 
     <style>
+        /* サイト共通のカラー設定 */
         :root {
             --primary-color: #10b981;
             --secondary-color: #f59e0b;
@@ -21,10 +21,10 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #fff2e5;
+            background-color: #fff2e5; /* 暖かみのある薄いオレンジ系の背景 */
         }
 
-        /* ===== Navbar ===== */
+        /* ===== ナビゲーションバー ===== */
         .navbar {
             background-color: white;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -46,13 +46,14 @@
             color: var(--primary-color) !important;
         }
 
-        /* ===== Page Header ===== */
+        /* ===== ページヘッダー（FAQの見出し部分） ===== */
         .page-header {
+            /* 緑からオレンジへのグラデーション背景 */
             background: linear-gradient(135deg,
                     rgba(220, 252, 231, 0.9),
                     rgba(254, 215, 170, 0.9));
             padding: 70px 0;
-            border-radius: 0 0 50px 50px;
+            border-radius: 0 0 50px 50px; /* 下側だけ角を丸くする */
             margin-bottom: 60px;
         }
 
@@ -61,7 +62,7 @@
             font-weight: bold;
         }
 
-        /* ===== FAQ Card ===== */
+        /* ===== FAQカード（質問全体を囲む白枠） ===== */
         .faq-card {
             background: white;
             border-radius: 25px;
@@ -70,41 +71,45 @@
             margin-bottom: 20px;
         }
 
+        /* アコーディオンのボタン（質問部分） */
         .accordion-button {
             font-weight: bold;
             color: var(--brown-color);
             background-color: #ffffff;
         }
 
+        /* 開いている状態の質問ボタンのスタイル */
         .accordion-button:not(.collapsed) {
             color: var(--primary-color);
-            background-color: rgba(16, 185, 129, 0.08);
+            background-color: rgba(16, 185, 129, 0.08); /* ほんのり緑色の背景 */
             box-shadow: none;
         }
 
+        /* クリックした時の青い枠線を消す設定 */
         .accordion-button:focus {
             box-shadow: none;
         }
 
+        /* アコーディオンの本文（回答部分） */
         .accordion-body {
             color: #555;
-            line-height: 1.8;
+            line-height: 1.8; /* 行間を広げて読みやすく */
         }
 
-        /* ===== Footer ===== */
+        /* ===== フッター ===== */
         footer {
             background-color: #8e7f7f;
             color: #d8e1f1;
             padding: 40px 0;
             margin-top: 80px;
-            border-radius: 50px 50px 0 0;
+            border-radius: 50px 50px 0 0; /* 上側だけ角を丸くする */
         }
     </style>
 </head>
 
 <body>
 
-     <nav class="navbar navbar-expand-lg sticky-top">
+    <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <i class="bi bi-hanger"></i> ハンガーtimes
@@ -121,15 +126,13 @@
                     <li class="nav-item"><a class="nav-link" href="pet-guide-form管理記録.html">管理記録</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-recordレビュー.html">メンテナンス記録</a></li>
                 </ul>
-                <a href="login.html"
-                    class="btn btn-outline-success ms-3 rounded-pill fw-bold btn-login text-decoration-none">
+                <a href="login.html" class="btn btn-outline-success ms-3 rounded-pill fw-bold text-decoration-none">
                     <i class="bi bi-person-circle"></i> ログイン
                 </a>
             </div>
         </div>
     </nav>
 
-    <!-- ===== Header ===== -->
     <section class="page-header text-center">
         <div class="container">
             <h1 class="display-4 mb-3">
@@ -141,9 +144,7 @@
         </div>
     </section>
 
-    <!-- ===== FAQ ===== -->
     <div class="container mb-5">
-
         <div class="faq-card">
             <div class="accordion" id="faqAccordion">
 
@@ -153,7 +154,7 @@
                             Q. シャツに最適なハンガーはどれですか？
                         </button>
                     </h2>
-                    <div id="q1" class="accordion-collapse collapse show">
+                    <div id="q1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
                         <div class="accordion-body">
                             襟の形を崩しにくい「シャツ・ブラウス用ハンガー」がおすすめです。
                             肩幅に合ったサイズを選ぶことで、型崩れを防げます。
@@ -163,12 +164,11 @@
 
                 <div class="accordion-item border-0 mt-3">
                     <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#q2">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#q2">
                             Q. スーツは上下セットで掛けた方がいいですか？
                         </button>
                     </h2>
-                    <div id="q2" class="accordion-collapse collapse">
+                    <div id="q2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                         <div class="accordion-body">
                             はい、上下セットで収納できるクリップ付きハンガーがおすすめです。
                             シワ防止と管理のしやすさが向上します。
@@ -178,12 +178,11 @@
 
                 <div class="accordion-item border-0 mt-3">
                     <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#q3">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#q3">
                             Q. 肩に跡がつかないハンガーはありますか？
                         </button>
                     </h2>
-                    <div id="q3" class="accordion-collapse collapse">
+                    <div id="q3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                         <div class="accordion-body">
                             肩部分が湾曲した「肩ぽこ防止タイプ」や滑り止め付きハンガーがおすすめです。
                             ニットやカーディガンに最適です。
@@ -193,23 +192,21 @@
 
                 <div class="accordion-item border-0 mt-3">
                     <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#q4">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#q4">
                             Q. 木製ハンガーとプラスチックハンガーの違いは？
                         </button>
                     </h2>
-                    <div id="q4" class="accordion-collapse collapse">
+                    <div id="q4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                         <div class="accordion-body">
                             木製ハンガーは耐久性と高級感があり、スーツやコート向き。
                             プラスチック製は軽量で日常使いに適しています。
                         </div>
                     </div>
                 </div>
-
-            </div>
+            </div> 
         </div>
-    </div>
-
+     </div>
+     
     <footer>
         <div class="container">
             <div class="row">
