--- a/form.html
+++ b/form.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>お問い合わせ - ハンガーtimes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-     <link rel="icon" href="img/favicon (4).ico">
+    <link rel="icon" href="img/favicon (4).ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+
     <style>
+        /* サイト共通のカラー設定 */
         :root {
             --primary-color: #10b981;
             --secondary-color: #f59e0b;
@@ -19,27 +21,29 @@
         body {
             background-color: #fff2e5;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            /* 画面全体を上下左右中央揃えにするための設定 */
             height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
             margin: 0;
-
         }
 
+        /* フォームを囲むカードのデザイン */
         .contact-card {
             background: white;
             border-radius: 30px;
             width: 100%;
-            max-width: 500px;
+            max-width: 500px; /* 横幅が広がりすぎないように制限 */
             padding: 40px;
-            box-shadow: 0 15px 35px rgba(67, 40, 24, 0.15);
+            box-shadow: 0 15px 35px rgba(67, 40, 24, 0.15); /* 柔らかい影 */
         }
 
         .card-top-nav {
             margin-bottom: 20px;
         }
 
+        /* 「ホームへ戻る」リンクのスタイル */
         .btn-back-link {
             color: var(--secondary-color);
             text-decoration: none;
@@ -53,7 +57,7 @@
 
         .btn-back-link:hover {
             color: var(--primary-color);
-            transform: translateX(-3px);
+            transform: translateX(-3px); /* 左に少し動くアニメーション */
         }
 
         .brand-logo {
@@ -71,27 +75,32 @@
             opacity: 0.8;
         }
 
+        /* 入力フォームのラベル */
         .form-label {
             color: var(--brown-color);
             font-weight: 600;
         }
 
+        /* 入力欄（input/textarea）のカスタマイズ */
         .form-control {
             border-radius: 12px;
             padding: 12px;
             border: 2px solid #f3f3f3;
         }
 
+        /* 入力欄にフォーカス（クリック）した時の色 */
         .form-control:focus {
             border-color: var(--secondary-color);
             box-shadow: none;
             background-color: #fffcf9;
         }
 
+        /* テキストエリアの右下のツマミ（サイズ変更）を無効化 */
         textarea.form-control {
             resize: none;
         }
 
+        /* 送信ボタン（グラデーション背景） */
         .btn-submit {
             background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
             border: none;
@@ -141,11 +150,15 @@
 
     <script>
         document.getElementById('contactForm').addEventListener('submit', function (e) {
+            // 実際の送信処理（ページ遷移）を一旦止める
             e.preventDefault();
+
             const btn = this.querySelector('.btn-submit');
+            // ボタンの表示を「送信中」に変更
             btn.innerHTML = '送信中...';
             btn.style.opacity = '0.7';
 
+            // 1秒後に「送信完了」のメッセージを出してホームへ戻す（擬似的な処理）
             setTimeout(() => {
                 alert('お問い合わせを送信しました。');
                 window.location.href = 'index.html';
