--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link rel="icon" href="img/favicon (4).ico">
     <style>
+        /* デザインシステム（カラー変数定義） */
         :root {
             --primary-color: #10b981;
             --secondary-color: #f59e0b;
@@ -16,11 +17,13 @@
             --brown-color: #78350f;
         }
 
+        /* ベーススタイル（フォント・背景色） */
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #fff2e5;
         }
 
+        /* ナビゲーションバーのスタイル */
         .navbar {
             background-color: white;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -43,11 +46,12 @@
             color: var(--primary-color) !important;
         }
 
-        /* ログインボタンの下線を消すための設定 */
+        /* ボタン関連のスタイル */
         .btn-login {
             text-decoration: none !important;
         }
 
+        /* ヒーローセクション（メインビジュアル） */
         .hero-section {
             background:
                 linear-gradient(135deg,
@@ -57,47 +61,29 @@
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-
             padding: 80px 0;
             border-radius: 0 0 50px 50px;
             margin-bottom: 50px;
         }
 
-
+        /* ヒーロー画像の装飾（アニメーション・マスク処理） */
         .hero-image {
             width: 100%;
             max-width: 500px;
             animation: float 3s ease-in-out infinite;
-
-            /* 角を丸くする */
             border-radius: 40px;
-
-            /* 枠を徐々に薄くする */
-            -webkit-mask-image: radial-gradient(ellipse at center,
-                    rgba(0, 0, 0, 1) 65%,
-                    rgba(0, 0, 0, 0) 100%);
-            mask-image: radial-gradient(ellipse at center,
-                    rgba(0, 0, 0, 1) 65%,
-                    rgba(0, 0, 0, 0) 100%);
-
-            /* ほんのり立体感（任意） */
+            -webkit-mask-image: radial-gradient(ellipse at center, rgba(0, 0, 0, 1) 65%, rgba(0, 0, 0, 0) 100%);
+            mask-image: radial-gradient(ellipse at center, rgba(0, 0, 0, 1) 65%, rgba(0, 0, 0, 0) 100%);
             filter: drop-shadow(0 12px 30px rgba(0, 0, 0, 0.18));
         }
 
-
-
+        /* 画像の浮遊アニメーション定義 */
         @keyframes float {
-
-            0%,
-            100% {
-                transform: translateY(0px);
-            }
-
-            50% {
-                transform: translateY(-20px);
-            }
+            0%, 100% { transform: translateY(0px); }
+            50% { transform: translateY(-20px); }
         }
 
+        /* ハンガー紹介カードのスタイル */
         .pet-card {
             background: white;
             border-radius: 30px;
@@ -106,8 +92,6 @@
             transition: all 0.3s ease;
             height: 100%;
             border: 3px solid transparent;
-
-            /* ★これを追加 */
             position: relative;
             z-index: 1;
         }
@@ -118,6 +102,7 @@
             border-color: var(--primary-color);
         }
 
+        /* カテゴリアイコンの丸い背景 */
         .pet-icon {
             width: 100px;
             height: 100px;
@@ -131,6 +116,7 @@
             color: white;
         }
 
+        /* タグ・バッジのスタイル */
         .category-badge {
             background: var(--secondary-color);
             color: white;
@@ -141,6 +127,7 @@
             margin-bottom: 15px;
         }
 
+        /* 特徴セクションのカード */
         .feature-card {
             background: white;
             border-radius: 25px;
@@ -163,6 +150,7 @@
             margin: 0 auto 20px;
         }
 
+        /* カスタムグラデーションボタン */
         .btn-primary-custom {
             background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
             border: none;
@@ -179,6 +167,7 @@
             box-shadow: 0 10px 25px rgba(16, 185, 129, 0.3);
         }
 
+        /* セクションタイトルの下線装飾 */
         .section-title {
             position: relative;
             display: inline-block;
@@ -196,6 +185,7 @@
             border-radius: 2px;
         }
 
+        /* フッターのスタイル */
         footer {
             background-color: #8e7f7f;
             color: #d8e1f1;
@@ -204,37 +194,23 @@
             border-radius: 50px 50px 0 0;
         }
 
-        .stats-box {
-            background: white;
-            border-radius: 20px;
-            padding: 30px;
-            text-align: center;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.08);
-        }
-
+        /* 統計ボックスの数値スタイル */
         .stats-number {
             font-size: 2.5rem;
             font-weight: bold;
             color: var(--primary-color);
         }
 
-        /* セクションごとの余白を共通化（上下に大きなスペース） */
-section {
-    padding-top: 100px;
-    padding-bottom: 100px;
-}
+        /* セクション共通の余白設定 */
+        section {
+            padding-top: 100px;
+            padding-bottom: 100px;
+        }
 
-/* 統計カードセクション専用の調整 */
-.stats-container {
-    padding: 80px 0; /* 上下の余白 */
-    margin: 0;      /* 不要なマージンをリセット */
-}
-
-/* カード内のテキストの間隔 */
-.pet-card p {
-    line-height: 1.8;
-    margin-bottom: 25px !important;
-}
+        .pet-card p {
+            line-height: 1.8;
+            margin-bottom: 25px !important;
+        }
     </style>
 </head>
 
