--- a/login.html
+++ b/login.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ログイン - ハンガーtimes</title>
-     <link rel="icon" href="img/favicon (4).ico">
+    <link rel="icon" href="img/favicon (4).ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+    
     <style>
+        /* サイト共通のカラー設定 */
         :root {
             --primary-color: #10b981;
             --secondary-color: #f59e0b;
@@ -19,6 +21,7 @@
         body {
             background-color: #fff2e5;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            /* ログインカードを画面の上下左右中央に配置する設定 */
             height: 100vh;
             display: flex;
             align-items: center;
@@ -26,18 +29,19 @@
             margin: 0;
         }
 
+        /* ログインボックス（白いカード部分） */
         .login-card {
             background: white;
             border-radius: 30px;
             width: 100%;
-            max-width: 420px;
+            max-width: 420px; /* カードの最大幅を制限 */
             padding: 40px;
             box-shadow: 0 15px 35px rgba(67, 40, 24, 0.15);
             position: relative;
             overflow: hidden;
         }
 
-        /* カード内の上部に戻るボタンを配置 */
+        /* カード内の上部ナビ（ホームへ戻るリンク） */
         .card-top-nav {
             display: flex;
             justify-content: flex-start;
@@ -57,9 +61,10 @@
 
         .btn-back-link:hover {
             color: var(--primary-color);
-            transform: translateX(-3px);
+            transform: translateX(-3px); /* ホバー時に少し左に動かす */
         }
 
+        /* ロゴとタイトルのデザイン */
         .brand-logo {
             font-size: 1.8rem;
             font-weight: bold;
@@ -76,6 +81,7 @@
             opacity: 0.8;
         }
 
+        /* フォームラベルと入力欄のスタイル */
         .form-label {
             color: var(--brown-color);
             font-weight: 600;
@@ -87,12 +93,14 @@
             border: 2px solid #f3f3f3;
         }
 
+        /* 入力フォーカス時の装飾 */
         .form-control:focus {
             border-color: var(--secondary-color);
             box-shadow: none;
             background-color: #fffcf9;
         }
 
+        /* グラデーション背景のログインボタン */
         .btn-login {
             background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
             border: none;
@@ -104,6 +112,7 @@
             margin-top: 15px;
         }
 
+        /* 「または〜」の区切り線（Flexboxで線を左右に広げる） */
         .divider {
             display: flex;
             align-items: center;
@@ -124,12 +133,14 @@
             padding: 0 10px;
         }
 
+        /* SNSログインボタンの並び（横並び） */
         .social-login {
             display: flex;
             gap: 12px;
             justify-content: center;
         }
 
+        /* 丸みのある四角いSNSアイコンボタン */
         .btn-social {
             width: 45px;
             height: 45px;
@@ -147,6 +158,7 @@
             border-color: var(--secondary-color);
         }
 
+        /* 新規登録へのリンクエリア */
         .signup-link {
             text-align: center;
             margin-top: 30px;
@@ -206,11 +218,14 @@
 
     <script>
         document.getElementById('loginForm').addEventListener('submit', function (e) {
-            e.preventDefault();
+            e.preventDefault(); // 実際のフォーム送信を防ぐ
             const btn = this.querySelector('.btn-login');
+            
+            // ボタンを「認証中」の状態に書き換える演出
             btn.innerHTML = '認証中...';
             btn.style.opacity = '0.7';
 
+            // 1秒後にホーム画面へ遷移させる
             setTimeout(() => {
                 window.location.href = 'index.html';
             }, 1000);
@@ -220,3 +235,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
+</html>
