--- a/metalhanger.html
+++ b/metalhanger.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ハンガーtimes - 金属ハンガー詳細</title>
-     <link rel="icon" href="img/favicon (4).ico">
+    <link rel="icon" href="img/favicon (4).ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <style>
@@ -21,7 +21,7 @@
             background-color: #fff2e5;
         }
 
-        /* ナビゲーション */
+        /* ===== ナビゲーションバー ===== */
         .navbar {
             background-color: white;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -33,18 +33,9 @@
             font-size: 1.5rem;
         }
 
-        .nav-link {
-            color: var(--brown-color) !important;
-            font-weight: 500;
-            margin: 0 10px;
-        }
-
-        .nav-link:hover {
-            color: var(--primary-color) !important;
-        }
-
-        /* ヒーローセクション */
+        /* ===== ヒーローセクション（背景画像付き見出し） ===== */
         .hanger-hero {
+            /* linear-gradientで画像に少し黒いフィルタをかけ、文字を読みやすくしています */
             background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('img/71+Ew-KsuaL._AC_.jpg');
             background-size: cover;
             background-position: center;
@@ -57,17 +48,19 @@
             text-align: center;
         }
 
-        /* メインカード */
+        /* ===== メインコンテンツカード ===== */
         .hanger-main-card {
             background: white;
             border-radius: 30px;
             padding: 40px;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+            /* margin-topをマイナスにすることで、上のヒーローエリアに少し被せています */
             margin-top: -60px;
             position: relative;
             z-index: 2;
         }
 
+        /* 特徴（スペック）を並べる小さなボックス */
         .spec-item {
             background: #fdf2f2;
             border-radius: 20px;
@@ -85,7 +78,7 @@
             margin-top: 5px;
         }
 
-        /* サイドバー */
+        /* ===== サイドバーのカードデザイン ===== */
         .info-sidebar-card {
             background: white;
             border-radius: 25px;
@@ -94,32 +87,30 @@
             margin-bottom: 25px;
         }
 
-        /* 比較テーブル */
+        /* メリット・デメリット用のテーブル背景 */
         .comparison-table {
             background: #f9fafb;
             border-radius: 15px;
             overflow: hidden;
         }
 
+        /* フッターのスタイル */
         footer {
-            background-color: #5d5353;
-            color: white;
-            padding: 60px 0 30px;
+            background-color: #8e7f7f;
+            color: #d8e1f1;
+            padding: 40px 0;
             margin-top: 80px;
             border-radius: 50px 50px 0 0;
         }
 
-        /* ヒーロー直後のカード位置を下げて重なりを防ぐ */
-        /* 左右のカードの上位置を揃える */
+        /* 要素の重なり具合を調整するマージン設定 */
         .hanger-main-card,
         .info-sidebar-card {
             margin-top: 40px;
-            /* 上に40pxの余白をつけて整列 */
         }
 
-        /* 画面幅が狭いときはもう少し小さめに */
+        /* モバイル表示時の余白調整 */
         @media (max-width: 767px) {
-
             .hanger-main-card,
             .info-sidebar-card {
                 margin-top: 30px;
@@ -129,7 +120,7 @@
 </head>
 
 <body>
-     <nav class="navbar navbar-expand-lg sticky-top">
+    <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <i class="bi bi-hanger"></i> ハンガーtimes
@@ -146,8 +137,7 @@
                     <li class="nav-item"><a class="nav-link" href="pet-guide-form管理記録.html">管理記録</a></li>
                     <li class="nav-item"><a class="nav-link" href="pet-guide-recordレビュー.html">メンテナンス記録</a></li>
                 </ul>
-                <a href="login.html"
-                    class="btn btn-outline-success ms-3 rounded-pill fw-bold btn-login text-decoration-none">
+                <a href="login.html" class="btn btn-outline-success ms-3 rounded-pill fw-bold btn-login text-decoration-none">
                     <i class="bi bi-person-circle"></i> ログイン
                 </a>
             </div>
@@ -267,6 +257,7 @@
             </div>
         </div>
     </div>
+
     <footer>
         <div class="container">
             <div class="row">
@@ -307,5 +298,6 @@
         </div>
     </footer>
 </body>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </html>
