--- a/pet-guide-qaQ&A.html
+++ b/pet-guide-qaQ&A.html
@@ -9,21 +9,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <style>
+        /* 1. サイト全体の共通カラー（変数） */
         :root {
-            --primary-color: #10b981;
-            --secondary-color: #f59e0b;
-            --accent-color: #fb923c;
-            --brown-color: #78350f;
+            --primary-color: #10b981;   /* メイン：清潔感のある緑 */
+            --secondary-color: #f59e0b; /* サブ：活気のあるオレンジ */
+            --accent-color: #fb923c;    /* アクセント：暖色系 */
+            --brown-color: #78350f;     /* テキスト：落ち着いた濃い茶色 */
         }
 
+        /* 2. 基本の背景とフォント */
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #fff2e5;
+            background-color: #fff2e5; /* 非常に薄いオレンジ（目に優しい背景） */
         }
 
+        /* 3. ナビゲーションバー */
         .navbar {
             background-color: white;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* 下側に薄い影 */
         }
 
         .navbar-brand {
@@ -43,6 +46,7 @@
             color: var(--primary-color) !important;
         }
 
+        /* 4. ページヘッダー（グラデーションと画像の重なり） */
         .page-header {
             background:
                 linear-gradient(135deg,
@@ -52,15 +56,15 @@
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-
             padding: 60px 0;
-            border-radius: 0 0 50px 50px;
+            border-radius: 0 0 50px 50px; /* 下側だけ大きく丸める */
             margin-bottom: 40px;
         }
 
+        /* 5. 検索ボックス */
         .search-box {
             background: white;
-            border-radius: 50px;
+            border-radius: 50px; /* 楕円形 */
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
             padding: 8px;
             max-width: 600px;
@@ -75,10 +79,11 @@
         }
 
         .search-box input:focus {
-            outline: none;
+            outline: none; /* 入力時の青い枠線を消す */
         }
 
         .search-box button {
+            /* 緑からオレンジへのグラデーションボタン */
             background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
             border: none;
             color: white;
@@ -87,6 +92,16 @@
             font-weight: bold;
         }
 
+        /* 11. ページ下部のフッター設定 */
+        footer {
+            background-color: #8e7f7f;
+            color: #d8e1f1;
+            padding: 40px 0;
+            margin-top: 80px;
+            border-radius: 50px 50px 0 0; /* 上側の角を丸めてモダンに */
+        }
+
+        /* 6. カテゴリ切り替えタブ */
         .category-tabs {
             background: white;
             border-radius: 30px;
@@ -105,20 +120,22 @@
         }
 
         .category-tabs .nav-link:hover {
-            background-color: rgba(16, 185, 129, 0.1);
+            background-color: rgba(16, 185, 129, 0.1); /* ホバー時に薄い緑 */
         }
 
         .category-tabs .nav-link.active {
+            /* 選択中のタブは目立つグラデーションに */
             background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
             color: white !important;
         }
 
+        /* 7. アコーディオン（FAQの開閉部分） */
         .accordion-item {
             background: white;
             border: none;
             border-radius: 20px !important;
             margin-bottom: 15px;
-            overflow: hidden;
+            overflow: hidden; /* 角の丸みからはみ出る内容を隠す */
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
         }
 
@@ -131,8 +148,9 @@
             border-radius: 20px !important;
         }
 
+        /* 開いている状態のアコーディオンボタン */
         .accordion-button:not(.collapsed) {
-            background: linear-gradient(135deg, #dcfce7, #fed7aa);
+            background: linear-gradient(135deg, #dcfce7, #fed7aa); /* 薄い緑〜オレンジ */
             color: var(--brown-color);
             box-shadow: none;
         }
@@ -142,6 +160,7 @@
             border: none;
         }
 
+        /* アコーディオンの矢印アイコン（SVGをデータURLで指定） */
         .accordion-button::after {
             background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%2378350f'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
         }
@@ -151,11 +170,12 @@
             background-color: #fefefe;
         }
 
+        /* 8. 質問のメタ情報（投稿日、回答数など） */
         .question-meta {
             display: flex;
             gap: 15px;
             margin-top: 15px;
-            flex-wrap: wrap;
+            flex-wrap: wrap; /* 画面が狭い時に折り返す */
         }
 
         .meta-item {
@@ -166,6 +186,7 @@
             font-size: 0.9rem;
         }
 
+        /* カテゴリラベル（オレンジ色のバッジ） */
         .badge-category {
             background: var(--secondary-color);
             color: white;
@@ -175,6 +196,7 @@
             font-weight: 600;
         }
 
+        /* 9. サイドバーのランキング */
         .sidebar-card {
             background: white;
             border-radius: 25px;
@@ -191,9 +213,10 @@
         }
 
         .ranking-item:last-child {
-            border-bottom: none;
+            border-bottom: none; /* 最後の線は消す */
         }
 
+        /* ランキングの順位数字（円形） */
         .ranking-number {
             width: 35px;
             height: 35px;
@@ -208,18 +231,12 @@
             margin-right: 15px;
         }
 
-        .ranking-number.gold {
-            background: linear-gradient(135deg, #fbbf24, #f59e0b);
-        }
+        /* 順位別の色分け（金・銀・銅） */
+        .ranking-number.gold { background: linear-gradient(135deg, #fbbf24, #f59e0b); }
+        .ranking-number.silver { background: linear-gradient(135deg, #d1d5db, #9ca3af); }
+        .ranking-number.bronze { background: linear-gradient(135deg, #d97706, #92400e); }
 
-        .ranking-number.silver {
-            background: linear-gradient(135deg, #d1d5db, #9ca3af);
-        }
-
-        .ranking-number.bronze {
-            background: linear-gradient(135deg, #d97706, #92400e);
-        }
-
+        /* 10. 「質問を投稿する」ボタン */
         .btn-post-question {
             background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
             border: none;
@@ -233,10 +250,11 @@
         }
 
         .btn-post-question:hover {
-            transform: translateY(-3px);
+            transform: translateY(-3px); /* 浮き上がるアニメーション */
             box-shadow: 0 10px 25px rgba(16, 185, 129, 0.3);
         }
 
+        /* 11. 統計バッジ（いいね数など） */
         .stats-badge {
             display: inline-flex;
             align-items: center;
@@ -248,22 +266,16 @@
             font-weight: 600;
         }
 
-        footer {
-            background-color: #8e7f7f;
-            color: #d8e1f1;
-            padding: 40px 0;
-            margin-top: 80px;
-            border-radius: 50px 50px 0 0;
-        }
-
+        /* 12. 回答のハイライト（ベストアンサーなど） */
         .answer-highlight {
-            background-color: #f0fdf4;
-            border-left: 4px solid var(--primary-color);
+            background-color: #f0fdf4; /* ごく薄い緑 */
+            border-left: 4px solid var(--primary-color); /* 左側に緑の強調線 */
             padding: 15px;
             border-radius: 10px;
             margin-top: 15px;
         }
 
+        /* 13. 「役に立った」ボタン */
         .helpful-btn {
             background-color: transparent;
             border: 2px solid var(--primary-color);
@@ -279,21 +291,18 @@
             color: white;
         }
 
+        /* 14. 検索ボックスのレスポンシブ・崩れ防止設定 */
         .search-box .d-flex {
-            flex-wrap: nowrap;
-            /* 折り返し禁止 */
+            flex-wrap: nowrap; /* ボタンが下に落ちないように固定 */
         }
 
         .search-box input {
-            min-width: 0;
-            /* flexでのはみ出し防止 */
+            min-width: 0; /* flexコンテナ内でのサイズ異常を防止 */
         }
 
         .search-box button {
-            white-space: nowrap;
-            /* 「検 索」みたいな縦割れ防止 */
-            flex-shrink: 0;
-            /* ボタン幅を維持 */
+            white-space: nowrap; /* テキストを改行させない */
+            flex-shrink: 0;      /* ボタンが潰れるのを防止 */
         }
     </style>
 </head>
