--- a/pulastic.html
+++ b/pulastic.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <style>
+        /* デザインシステム（カラー変数定義） */
         :root {
             --primary-color: #10b981;
             --secondary-color: #f59e0b;
@@ -101,10 +102,11 @@
             overflow: hidden;
         }
 
+        /* フッターのスタイル */
         footer {
-            background-color: #5d5353;
-            color: white;
-            padding: 60px 0 30px;
+            background-color: #8e7f7f;
+            color: #d8e1f1;
+            padding: 40px 0;
             margin-top: 80px;
             border-radius: 50px 50px 0 0;
         }
